Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <h3>
 <a name="the-challenge" class="anchor" href="#the-challenge"><span class="octicon octicon-link"></span></a>The Challenge</h3>
 
-<p>This challenge came to me from a cousin of mine who works for a non-profit in Houston where he was wondering if it was possible to be able to measure how effective any crowdfunding campaign could be in general, over time. One of the modern hallmarks of crowdfunding is to usually rely on sites like kickstarter and indigogo, so I knew where I would start.</p>
+<p>This challenge came to me from a cousin of mine who works for a non-profit in Houston, TX (<a href="http://iamforgood.org/">Neighborhood Centers Inc</a>) where he was wondering if it was possible to be able to measure how effective any crowdfunding campaign could be in general, over time. One of the modern hallmarks of crowdfunding is to usually rely on sites like kickstarter and indigogo, so I knew where I would start.</p>
 
 <h3>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h3>
