Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="mining-social-media-data-in-context-of-crowdfunding-data" class="anchor" href="#mining-social-media-data-in-context-of-crowdfunding-data"><span class="octicon octicon-link"></span></a>Mining Social Media Data In Context of Crowdfunding Data</h1>
+<a name="mining-social-media-data-in-context-of-crowdfunding-data" class="anchor" href="#mining-social-media-data-in-context-of-crowdfunding-data"><span class="octicon octicon-link"></span></a>Mining social media data in context of crowdfunding data</h1>
 
 <h2>
 <a name="--part-1-social-side" class="anchor" href="#--part-1-social-side"><span class="octicon octicon-link"></span></a>- Part 1: Social Side</h2>
